deploy/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: armando-deployment
  namespace: Hadi
spec:
  selector:
    matchLabels:
      app: armando
  replicas: 2
  template:
    metadata:
      labels:
        app: armando
    spec:
      containers:
        - name: armando
          image: armando:1.1.0  
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /health-check
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
          ports:
          - containerPort: 8080
          volumeMounts:
            - name: armando-volume
              mountPath: /file-config.yml
              subPath: configuration.yml
      volumes:
        - name: armando-volume
          configMap:
            name: armando-file-config
