deploy/Service-without-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: armando-service-2
  namespace: Hadi
spec:
  type: ClusterIP
  selector:
    app: armando
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
