deploy/ServiceLoadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: armando-service-lb
  namespace: Hadi
spec:
  type: LoadBalancer 
  selector:
    app: armando
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
