deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: armando-service
  namespace: Hadi
spec:
  type: NodePort
  selector:
    app: armando
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
