deploy/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: armando-ingress
spec:
  rules:
    - host: host.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: armando-service
                port:
                  number: 80
